# hw04-Group21

./: LOSC_Event_tutorial.html  Makefile  README.html  README.md  _toc.yml  contribution_statement.html  contribution_statement.md  genindex.html  hw04_description.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  search.html  searchindex.js
_build/.doctrees/: LOSC_Event_tutorial.doctree  contribution_statement.doctree  environment.pickle  hw04_description.doctree  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
_build/html/: LOSC_Event_tutorial.html  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  searchindex.js
_build/html/.doctrees/: environment.pickle  notebooks.doctree
_build/jupyter_execute/: markdown-notebooks.ipynb  notebooks.ipynb
_sources/: contribution_statement.md  hw04_description.md
ligotools/: setup.cfg  utils.py
ligotools/ligotools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ligotools/tests/: test_readligo.py  test_utils.py  tests_utils.py
mybook/: hw04_description.md
mybook/_build/.doctrees/: environment.pickle  hw04_description.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
mybook/_build/html/: LOSC_Event_tutorial.html  hw04_description.html  notebooks.html  objects.inv  searchindex.js
mybook/_build/html/.doctrees/: LOSC_Event_tutorial.doctree  hw04_description.doctree  intro.doctree
mybook/_build/jupyter_execute/: markdown-notebooks.ipynb  notebooks.ipynb
