# Declarative configuration for setup.py

# For more details on this format, see the official docs here:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# And a useful annotated template can be found here:
# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

[metadata]
name             = ligotools
version          = attr: ligotools.__version__
author           = Ligo Scientific Collaboration (LSC) Group 21 (James Xu, Joselin Hartanto, Nancy Xu, Hannah Cooper)
author_email     = james.xu@berkeley.edu, jhartanto1@berkeley.edu, yinuoxu54@berkeley.edu, hmcooper@berkeley.edu
description      = A Python library to make toys
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords         = tools, ligo
license          = BSD 3-Clause License
classifiers      =
	Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
# These should be consistent with what is specified in the environment.yml
python_requires  = >= 3.8,
install_requires = 
	numpy; python_version == '1.23'
	h5py; python_version == '1.23'
	ipython; python_version == '8.2'
	ipykernel; python_version == '5.5'
	decorator; python_version == '5.1'
	scipy; python_version == '1.8'


[options.packages.find]
exclude =
    examples*
    docs*